@@ -2,13 +2,11 @@ package engine.utils;
 
 import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import engine.exceptions.CustomExceptions;
 import engine.reporters.Loggers;
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 public class JSONReader {
     private static final ObjectMapper objectMapper = new ObjectMapper();
@@ -21,8 +19,7 @@ public class JSONReader {
             Loggers.getLogger().info("Deserializing JSON file: {}", file);
             return objectMapper.readValue(new File(file), classType);
         } catch (IOException e) {
-            throw new RuntimeException("Failed to read JSON from " + file, e);
-        }
+            throw  new CustomExceptions("Failed to read JSON array from " + file, e);        }
     }
 
     public static <T> List<T> deserializeJsonArray(String file, Class<T> classType) {
@@ -32,7 +29,7 @@ public class JSONReader {
                     .constructCollectionType(List.class, classType);
             return objectMapper.readValue(new File(file), type);
         } catch (IOException e) {
-            throw new RuntimeException("Failed to read JSON array from " + file, e);
+            throw  new CustomExceptions("Failed to read JSON array from " + file, e);
         }
     }
 
@@ -43,6 +40,6 @@ public class JSONReader {
     public static <T> List<T> convertToList(List<?> data, Class<T> classType) {
         return data.stream()
                 .map(obj -> objectMapper.convertValue(obj, classType))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
